# MonsterHunterWildsSetOptimizer

./: Cargo.toml  README.md
src/: armor.rs  config.rs  decoration.rs  hunter.rs  main.rs  skill.rs  weapon.rs
src/armor/: arms.rs  chest.rs  head.rs  legs.rs  talisman.rs  waist.rs
src/decoration/: armor_decoration.rs  weapon_decoration.rs
src/skill/: armor_skill.rs  group_skill.rs  set_bonus_skill.rs  weapon_skill.rs
src/weapon/: lance.rs
