[package]
name = "zephyr-squall-monster-hunter-wilds-set-optimizer"
version = "0.1.0"
edition = "2024"

[dependencies]
itertools = "0.14.0"
rayon = "1.10.0"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
clone_on_ref_ptr = "warn"
collapsible_else_if = "allow"
dbg_macro = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
if_then_some_else_none = "warn"
infinite_loop = "warn"
mod_module_files = "warn"
multiple_inherent_impl = "warn"
print_stderr = "allow"
print_stdout = "allow"
redundant_type_annotations = "warn"
ref_patterns = "warn"
similar_names = "allow"
string_add = "warn"
tests_outside_test_module = "warn"
too_many_lines = "allow"
unseparated_literal_suffix = "warn"
unwrap_used = "warn"
use_debug = "warn"